Button Groups Added

--- a/content/Components/button-groups.hbs
+++ b/content/Components/button-groups.hbs
@@ -20,7 +20,7 @@ page-category: "components"
 <!-- writings -->
 
 		        <div class="page__body rte">
-
+					{{> buttongroup buttongroup }}
 		        </div>
 
 <!-- example -->
