--- a/assets/less/base_modules/button.less
+++ b/assets/less/base_modules/button.less
@@ -119,7 +119,28 @@
         ._button-create (@BUTTON-DisabledColor, @BUTTON-DisabledHoverColor, @BUTTON-DisabledTextColor);
     }
 }
+    // BUTTON GROUPS
 
+    .buttongroup {
+        position:relative;
+        vertical-align:middle;
+        white-space: nowrap;
+        ._inline-block();
+
+        .button {
+            position:relative;
+            float:left;
+            ._border-radius(0);
+
+            &:first-child, &.first {
+                ._border-radius-custom(5, 0, 0, 5);
+            }
+
+            &:last-child, &.last {
+                ._border-radius-custom(0,5,5,0);
+            }
+        }
+    }
 .button__totop {
     color: @COLOR-White;
     background-color: @BUTTON-AltColor;
