added in some more controller helpers

--- a/content/Systems/helpers.hbs
+++ b/content/Systems/helpers.hbs
@@ -37,13 +37,13 @@ page-category: "systems"
 							<p>There are several groups for these utility classes, which in essence modify the behaviour of a block in a 'standard' way - THese are as follows</p>
 
 						<ul>
-                            <li>Layout
+                            <li><strong>Layout</strong>
 								<ul>
 									<li><code>.c</code></li>
                                     <li><code>.rte</code></li>
 								</ul>
 							</li>
-                            <li>Display
+                            <li><strong>Display</strong>
 								<ul>
 									<li><code>.invisible</code></li>
                                     <li><code>.visible</code></li>
@@ -52,15 +52,18 @@ page-category: "systems"
                                     <li><code>.show</code></li>
 								</ul>
 							</li>
-                            <li>Alignment
+                            <li><strong>Alignment</strong>
 								<ul>
                                     <li><code>.left</code></li>
                                     <li><code>.right</code></li>
                                     <li><code>.center</code></li>
-                                    <li><code>.center-block</code></li>
+                                    <li><code>.center-block</code>
+                                    <li><code>.vertical</code></li>
+                                    <li><code>.justified</code></li>
+                                    <li><code>.inline</code></li>
 								</ul>
 							</li>
-                            <li>Media
+                            <li><strong>Media</strong>
 								<ul>
 									<li><code>.show-xs</code></li>
                                     <li><code>.show-sm</code></li>
@@ -74,7 +77,7 @@ page-category: "systems"
                                     <li><code>.hide-xl</code></li>
 								</ul>
 							</li>
-							<li>Size
+							<li><strong>Size</strong>
 								<ul>
 									<li><code>.xsmall</code></li>
                                     <li><code>.small</code></li>
@@ -82,7 +85,7 @@ page-category: "systems"
                                     <li><code>.xlarge</code></li>
 								</ul>
 							</li>
-                            <li>States
+                            <li><strong>States</strong>
 								<ul>
                                     <li><code>.info</code></li>
                                     <li><code>.warn</code></li>
@@ -91,7 +94,7 @@ page-category: "systems"
                                     <li><code>.disabled</code></li>
 								</ul>
 							</li>
-                            <li>Focus
+                            <li><strong>Focus</strong>
 								<ul>
                                     <li><code>.active</code></li>
                                     <li><code>.activating</code></li>
@@ -107,21 +110,6 @@ page-category: "systems"
 						</ul>
 				        <!-- end of code -->
 			        </div>
-
-		        </section>
-
-<!-- code -->
-
-		    	<section class="section section--code">
-		            <header class="section__head">
-		            	<h2 class="section__title">Code</h2>
-		            </header>
-
-		            <div class="section__body">
-			            <pre class="prettyprint linenums"><code class="html">
-
-			             </code></pre>
-		            </div>
 
 		        </section>
 
