removed daft spelling mistake

--- a/content/Systems/helpers.hbs
+++ b/content/Systems/helpers.hbs
@@ -34,7 +34,7 @@ page-category: "systems"
 				        <!-- code -->
 				        	<p>These will appear as classes in their own right and can be used to modify elements without creating a new modifier for that block.</p>
 
-							<p>There are several groups for these utility classes, which in essence modify the behaviour of a block in a 'standard' way - THese are as follows</p>
+							<p>There are several groups for these utility classes, which in essence modify the behaviour of a block in a 'standard' way - These are as follows</p>
 
 						<ul>
                             <li><strong>Layout</strong>
