Added button group variants

--- a/content/Components/button-groups.hbs
+++ b/content/Components/button-groups.hbs
@@ -32,6 +32,8 @@ page-category: "components"
 		            <div class="secton__body">
 				        <!-- code -->
 						{{> buttongroup buttongroup }}
+						{{> buttongroup buttongroup--justified }}
+						{{> buttongroup buttongroup--vertical }}
 
 				        <!-- end of code -->
 			        </div>
