--- a/assets/less/base_modules/button.less
+++ b/assets/less/base_modules/button.less
@@ -125,19 +125,54 @@
         position:relative;
         vertical-align:middle;
         white-space: nowrap;
+        ._padding(@TYPE-LineHeight/2,0);
         ._inline-block();
 
-        .button {
-            position:relative;
-            float:left;
-            ._border-radius(0);
+        .buttongroup {
+            padding:0;
+        }
 
+        > .button, .buttongroup {
+            position: relative;
+            float: left;
+            ._border-radius(0);
+        }
+        > .button {
             &:first-child, &.first {
                 ._border-radius-custom(5, 0, 0, 5);
             }
 
             &:last-child, &.last {
                 ._border-radius-custom(0,5,5,0);
+            }
+        }
+        &.justified {
+            display: table;
+            width: 100%;
+            table-layout: fixed;
+            border-collapse: separate;
+
+            > .button {
+                display: table-cell;
+                float: none;
+                width: 1%;
+            }
+        }
+        &.vertical {
+            > .button, .buttongroup {
+                display: block;
+                float: none;
+                width: 100%;
+                max-width: 100%;
+            }
+            > .button {
+                &:first-child, &.first {
+                    ._border-radius-custom(5, 5, 0, 0);
+                }
+
+                &:last-child, &.last {
+                    ._border-radius-custom(0,0,5,5);
+                }
             }
         }
     }
