--- a/content/_partials/buttongroup.hbs
+++ b/content/_partials/buttongroup.hbs
@@ -1,5 +1,5 @@
 {{#this}}
-<div role="group" class="buttongroup{{#if item.modifier}} buttongroup--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.vertical}} vertical{{/if}}">
+<div role="group" class="buttongroup{{#if item.modifier}} buttongroup--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.alignment}} {{item.alignment}}{{/if}}">
 {{#if actions}}
 	{{#each actions}}
 		{{#if buttons}}
