--- a/assets/less/base_modules/list.less
+++ b/assets/less/base_modules/list.less
@@ -14,10 +14,25 @@
 // VARIANTS
 // ----------------------------------------------------
 
-.list--horizontal {
+.list.horizontal {
    .list__item {
         display: inline;
     }
+}
+
+.list--alloythumbs {
+  .list__item {
+    display:block;
+    float:left;
+    width:25%;
+  }
+}
+
+.rte {
+  .list--alloythumbs {
+    padding:0;
+    margin:0;
+  }
 }
 
 // MOBILE
