--- a/content/Components/article.hbs
+++ b/content/Components/article.hbs
@@ -1,6 +1,7 @@
 ---
 title: Article Template
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Article"
 nav-text: "Article"
 nav-variant: "article"
