--- a/content/Components/button-stateful.hbs
+++ b/content/Components/button-stateful.hbs
@@ -1,6 +1,7 @@
 ---
 title: Buttons Stateful
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Buttons Stateful"
 nav-text: "Buttons Stateful"
 nav-variant: "buttons-stateful"
