--- a/content/Components/dropdowns.hbs
+++ b/content/Components/dropdowns.hbs
@@ -1,6 +1,7 @@
 ---
 title: Dropdowns
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Dropdowns"
 nav-text: "Dropdowns"
 nav-variant: "dropdowns"
