--- a/content/Components/hovercard.hbs
+++ b/content/Components/hovercard.hbs
@@ -1,6 +1,7 @@
 ---
 title: Hover Card
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Hover Card"
 nav-text: "Hover Card"
 nav-variant: "hovercard"
