--- a/content/Components/side-sliders.hbs
+++ b/content/Components/side-sliders.hbs
@@ -1,6 +1,7 @@
 ---
 title: Side Sliders
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Side Sliders"
 nav-text: "Side Sliders"
 nav-variant: "side-sliders"
