--- a/content/Components/toast.hbs
+++ b/content/Components/toast.hbs
@@ -46,6 +46,7 @@ js-toast: true
 		            <header class="section__head">
 		            	<h2 class="section__title">Example: Status</h2>
 		            </header>
+					<div class="section__body">
 				        {{> toast toast--info }}
 				        {{> toast toast--warn }}
 				        {{> toast toast--danger }}
@@ -60,6 +61,7 @@ js-toast: true
 		            <header class="section__head">
 		            	<h2 class="section__title">Example: Toast</h2>
 		            </header>
+					<div class="section__body">
 		            	<a href="#" class="button" data-toast='{"item": {"modifier": "","status": "success"}, "content": {"text": "You did it! A toast that pops up from the bottom of the page!","icon": [{"item": {"modifier": "round52","size": "xlarge"},"content": {"title": "" }}]}}'>Click here to see a live toast</a>
 		            	<!-- end of code -->
 			        </div>
