--- a/content/Components/accordions.hbs
+++ b/content/Components/accordions.hbs
@@ -1,6 +1,7 @@
 ---
 title: Accordions 
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Accordions"
 nav-text: "Accordions"
 nav-variant: "accordions"
