--- a/content/Components/button-dropdowns.hbs
+++ b/content/Components/button-dropdowns.hbs
@@ -1,6 +1,7 @@
 ---
 title: Buttons Dropdowns
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Buttons Dropdowns"
 nav-text: "Buttons Dropdowns"
 nav-variant: "buttons-dropdowns"
