--- a/content/Components/button-groups.hbs
+++ b/content/Components/button-groups.hbs
@@ -1,6 +1,7 @@
 ---
 title: Buttons Groups
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Buttons Groups"
 nav-text: "Buttons Groups"
 nav-variant: "buttons-groups"
