--- a/content/Components/callout.hbs
+++ b/content/Components/callout.hbs
@@ -1,6 +1,7 @@
 ---
 title: Callout Template
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Callout"
 nav-text: "Callout"
 nav-variant: "callout"
