--- a/content/Components/pagination.hbs
+++ b/content/Components/pagination.hbs
@@ -1,6 +1,7 @@
 ---
 title: Pagination
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Pagination"
 nav-text: "Pagination"
 nav-variant: "pagination"
