--- a/content/Components/progress-bars.hbs
+++ b/content/Components/progress-bars.hbs
@@ -1,6 +1,7 @@
 ---
 title: Progress Bars
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Progress Bars"
 nav-text: "Progress Bars"
 nav-variant: "progress-bars"
