--- a/content/Components/wells.hbs
+++ b/content/Components/wells.hbs
@@ -1,6 +1,7 @@
 ---
 title: Wells
 
+nav-thumb: "//placehold.it/200x200/"
 nav-title: "Wells"
 nav-text: "Wells"
 nav-variant: "wells"
@@ -48,6 +49,7 @@ page-category: "components"
 		            <header class="section__head">
 		            	<h2 class="section__title">Example: Size</h2>
 		            </header>
+                    <div class="secton__body">
 
 				        {{> well well--xsmall }}
 				        {{> well well--small }}
