--- a/assets/less/base_modules/list.less
+++ b/assets/less/base_modules/list.less
@@ -24,7 +24,12 @@
   .list__item {
     display:block;
     float:left;
-    width:25%;
+    width:22%;
+    margin-right:4%;
+
+    &:nth-child(4n+4) {
+      margin-right:0;
+    }
   }
 }
 
