--- a/content/index.hbs
+++ b/content/index.hbs
@@ -29,7 +29,7 @@ navigation-order: 1
 								<li class="list__item">
 									<a href="{{relative ../../../../page.dest this.dest}}" class="card card--alloythumb{{#if page.nav-variant}} card--{{data.nav-variant}}{{/if}}" title="{{data.nav-title}}"{{#if data.nav-target}} target="{{data.nav-target}}"{{/if}}>
 										<div class="card__front">
-											<div class="card__head">{{#if data.nav-thumb}}<img src="{{data.nav-thumb}} alt="{{data.nav-text}}" />{{/if}}
+											<div class="card__head">{{#if data.nav-thumb}}<img src="{{data.nav-thumb}}" alt="{{data.nav-text}}" class="card__image" />{{/if}}
 												<div class="card__title">{{capitalizeFirst data.nav-text}}</div>
 											</div>
 										</div>
