--- a/content/Components/callout.hbs
+++ b/content/Components/callout.hbs
@@ -62,6 +62,10 @@ page-category: "components"
 		            </header>
 		            <div class="section__body rte">
 
+			            <ul>
+			            	<li><a href="http://cssdeck.com/labs/bv45bh6p" target="_blank">http://cssdeck.com/labs/bv45bh6p</a></li>
+			            </ul>
+		            
 		            </div>
 		        </section>
 
