--- a/assets/less/base_modules/alert.less
+++ b/assets/less/base_modules/alert.less
@@ -41,7 +41,25 @@
 
     ._padding (@TYPE-FontSize);
     ._margin (0, 0, @TYPE-LineHeight, 0);
-    ._depth-1 ();
+    ._depth-1();
+}
+
+.alert__content {
+    overflow: hidden;
+    _overflow: visible;
+    zoom: 1;
+}
+
+.alert__title {
+    font-style: italic;
+    ._font-size (@TYPE-SIZE-Gamma);
+}
+
+.alert__icon {
+    float: left;
+    line-height: 1;
+    ._padding-top (10);
+    ._margin-right (10);
 }
 
 // STATUSES
