--- a/content/_partials/alert.hbs
+++ b/content/_partials/alert.hbs
@@ -1,5 +1,9 @@
 {{#this}}
 <div class="alert{{#if item.modifier}} alert--{{item.modifier}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}">
-  {{#if content.icon}}{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}{{/if}}
-  <div class="alert__content">{{{content.text}}}</div></div>
+	{{#if content.icon}}<div class="alert__icon">{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}</div>{{/if}}
+	<div class="alert__content">
+		{{#if content.title}}<div class="alert__title">{{content.title}}</div>{{/if}}
+		{{#if content.body}}<div class="alert__body rte">{{{content.body}}}</div>{{/if}}
+	</div>
+</div>
 {{/this}}
