--- a/content/Components/accordions.hbs
+++ b/content/Components/accordions.hbs
@@ -9,7 +9,7 @@ page-category: "components"
 js-accordion: true
 ---
 
-<main class="w w--main">
+<main class="w w--main" role="main">
 	<div class="g">
 		<div class="c__lg--1">
 
