Added alert icons

--- a/assets/less/base_modules/alert.less
+++ b/assets/less/base_modules/alert.less
@@ -52,12 +52,13 @@
 
 .alert__title {
     font-weight: bold;
+    ._font-size (@TYPE-SIZE-Epsilon);
 }
 
 .alert__icon {
     float: left;
     line-height: 1;
-    ._padding-top (10);
+    ._padding-top (7);
     ._margin-right (10);
 }
 
