--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -219,6 +219,7 @@
 @MODULE-Overlay:                true;
 @MODULE-Pagination:             true;
 @MODULE-Panel:					true;
+@MODULE-Popover:				true;
 @MODULE-Print:                  true;
 @MODULE-Story:             		true;
 @MODULE-RTE:					true;
