--- a/content/Components/popover.hbs
+++ b/content/Components/popover.hbs
@@ -34,6 +34,11 @@ page-category: "components"
 		            <div class="secton__body">
 				        <!-- code -->
 
+				        {{> popover popover-top }}
+				        {{> popover popover-bottom }}
+				        {{> popover popover-left }}
+				        {{> popover popover-right }}
+
 				        <!-- end of code -->
 			        </div>
 
@@ -61,6 +66,10 @@ page-category: "components"
 		                <h2 class="section__title">References</h2>
 		            </header>
 		            <div class="section__body rte">
+
+		            	<ul>
+		            		<li><a href="http://www.tutorialrepublic.com/twitter-bootstrap-tutorial/bootstrap-popovers.php" target="_blank">http://www.tutorialrepublic.com/twitter-bootstrap-tutorial/bootstrap-popovers.php</a></li>
+		            	</ul>
 
 		            </div>
 		        </section>
