Added element thumbnails

--- a/assets/less/base_modules/popover.less
+++ b/assets/less/base_modules/popover.less
@@ -21,6 +21,7 @@
 	position: relative;
 	width: 300px;
 	border: 1px solid @POPOVER-BorderColor;
+    z-index: @Z-INDEX-Level3;
     ._border-radius (@STYLE-BorderRadius/2);
     ._margin (@TYPE-LineHeight);
 
