--- a/content/Components/breadcrumbs.hbs
+++ b/content/Components/breadcrumbs.hbs
@@ -1,7 +1,7 @@
 ---
 title: Breadcrumbs
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/breadcrumbs.jpg"
 nav-title: "Breadcrumbs"
 nav-text: "Breadcrumbs"
 nav-variant: "breadcrumbs"
