--- a/content/Components/button-dropdowns.hbs
+++ b/content/Components/button-dropdowns.hbs
@@ -1,10 +1,10 @@
 ---
 title: Buttons Dropdowns
 
-nav-thumb: "//placehold.it/200x200/"
-nav-title: "Buttons Dropdowns"
-nav-text: "Buttons Dropdowns"
-nav-variant: "buttons-dropdowns"
+nav-thumb: "placeholder.jpg"
+nav-title: "Button Dropdowns"
+nav-text: "Button Dropdowns"
+nav-variant: "button-dropdowns"
 page-category: "components"
 ---
 
