--- a/content/Components/button-groups.hbs
+++ b/content/Components/button-groups.hbs
@@ -1,10 +1,10 @@
 ---
 title: Buttons Groups
 
-nav-thumb: "//placehold.it/200x200/"
-nav-title: "Buttons Groups"
-nav-text: "Buttons Groups"
-nav-variant: "buttons-groups"
+nav-thumb: "components/button-groups.jpg"
+nav-title: "Button Groups"
+nav-text: "Button Groups"
+nav-variant: "button-groups"
 page-category: "components"
 ---
 
