--- a/content/Components/cards.hbs
+++ b/content/Components/cards.hbs
@@ -1,10 +1,10 @@
 ---
-title: Buttons Stateful
+title: Cards
 
-nav-thumb: "//placehold.it/200x200/"
-nav-title: "Buttons Stateful"
-nav-text: "Buttons Stateful"
-nav-variant: "buttons-stateful"
+nav-thumb: "placeholder.jpg"
+nav-title: "Cards"
+nav-text: "Cards"
+nav-variant: "cards"
 page-category: "components"
 ---
 
@@ -33,7 +33,7 @@ page-category: "components"
 
 		            <div class="secton__body">
 				        <!-- code -->
-
+	        				{{> card card }}
 				        <!-- end of code -->
 			        </div>
 
