--- a/content/Components/focus.hbs
+++ b/content/Components/focus.hbs
@@ -1,7 +1,7 @@
 ---
 title: Focus
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/focus.jpg"
 nav-title: "Focus"
 nav-text: "Focus"
 nav-variant: "focus"
