--- a/content/Components/input.hbs
+++ b/content/Components/input.hbs
@@ -1,7 +1,7 @@
 ---
 title: Input
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "placeholder.jpg"
 nav-title: "Input"
 nav-text: "Input"
 nav-variant: "input"
