--- a/content/Components/modals.hbs
+++ b/content/Components/modals.hbs
@@ -1,7 +1,7 @@
 ---
 title: Modals
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "placeholder.jpg"
 nav-title: "Modals"
 nav-text: "Modals"
 nav-variant: "modals"
