--- a/content/Components/panels.hbs
+++ b/content/Components/panels.hbs
@@ -1,7 +1,7 @@
 ---
 title: Panels
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/panels.jpg"
 nav-title: "Panels"
 nav-text: "Panels"
 nav-variant: "panels"
