--- a/content/Components/toolbars.hbs
+++ b/content/Components/toolbars.hbs
@@ -1,7 +1,7 @@
 ---
 title: Toolbars
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "placeholder.jpg"
 nav-title: "Toolbars"
 nav-text: "Toolbars"
 nav-variant: "toolbars"
