--- a/content/Components/tooltips.hbs
+++ b/content/Components/tooltips.hbs
@@ -1,7 +1,7 @@
 ---
 title: Tooltips
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/tooltips.jpg"
 nav-title: "Tooltips"
 nav-text: "Tooltips"
 nav-variant: "tooltips"
@@ -34,8 +34,8 @@ page-category: "components"
 		            <div class="secton__body">
 				        <!-- code -->
 
-				        <p><a href="#" data-tooltip="Tooltip">Tooltip</a></p>
-				        <p><a href="#" data-tooltip="This is a large tooltip" class="tooltip-large">Tooltip Large</a></p>
+				        <p><a href="#" data-tooltip="Small tooltip">Small tooltip</a></p>
+				        <p><a href="#" data-tooltip="This is a large tooltip with far too much text for a tooltip but that's OK for now" class="tooltip-large">Large tooltip</a></p>
 
 				        <!-- end of code -->
 			        </div>
