--- a/content/Examples/holygrail.hbs
+++ b/content/Examples/holygrail.hbs
@@ -3,6 +3,7 @@ title: Holy Grail Layout
 subtitle: A good 3 Column Layout
 layout: example.hbs
 
+nav-thumb: "placeholder.jpg"
 nav-title: "Holy Grail Layout"
 nav-text: "Holy Grail Layout"
 nav-variant: "examples"
