--- a/content/Examples/newspaper.hbs
+++ b/content/Examples/newspaper.hbs
@@ -3,6 +3,7 @@ title: Newspaper Layout
 subtitle: Inspired by newspapers
 layout: example.hbs
 
+nav-thumb: "placeholder.jpg"
 nav-title: "Newspaper Layout"
 nav-text: "Newspaper Layout"
 nav-variant: "examples"
