--- a/content/Examples/standard.hbs
+++ b/content/Examples/standard.hbs
@@ -3,6 +3,7 @@ title: Standard Layout
 subtitle: fits most uses without issue
 layout: example.hbs
 
+nav-thumb: "placeholder.jpg"
 nav-title: "Standard Layout"
 nav-text: "Standard Layout"
 nav-variant: "examples"
