--- a/content/Examples/wrap-split.hbs
+++ b/content/Examples/wrap-split.hbs
@@ -2,6 +2,7 @@
 title: Wrap Split
 layout: example.hbs
 
+nav-thumb: "placeholder.jpg"
 nav-title: "Wrap Split"
 nav-text: "Wrap Split"
 nav-variant: "examples"
