--- a/assets/less/base_modules/card.less
+++ b/assets/less/base_modules/card.less
@@ -16,9 +16,14 @@
 .card {
 	background-color: @CARD-BgColor;
 	background-clip: padding-box;
-	._margin (10, 0, 20, 0);
+	display: block;
 	._border-radius (2);
 	._depth-1();
+	._transition (all, 0.1s);
+
+	+ .card {
+		._margin-top (@TYPE-LineHeight);
+	}
 }
 
 .card__head {
@@ -27,21 +32,19 @@
 	.card__image {
 		width: 100%;
 	}
-
-	.card__title {
-		position: absolute;
-	  	line-height: 1.2;
-		bottom: 10px;
-		left: 20px;
-	}
 }
 
 .card__title {
-	._font-size-heading (@TYPE-SIZE-Beta);
+	background-color: rgba(0, 0, 0, 0.7);
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	._font-size-heading (@TYPE-SIZE-Delta);
+	._padding (@TYPE-LineHeight/2);
 }
 
 .card__content {
-	._padding (20);
+	._padding (@TYPE-LineHeight);
 }
 
 .card__front {}
@@ -49,18 +52,18 @@
 
 .card__actions {
 	border-top: 1px solid lighten(@CARD-BgColor, 5);
-	._margin-top (15);
-	._padding-top (20);
+	._margin-top (@TYPE-LineHeight/2);
+	._padding-top (@TYPE-LineHeight);
 }
 
 // CARD VARIANTS
 // ----------------------------------------------------
 
 .card--alloythumb {
-	width: 100%;
-	display: block;
-	float: left;
-	._transition (all, 0.1s);
+	&:link,
+	&:visited {
+		color: @COLOR-White;
+	}
 
 	&:hover {
 	  ._depth-2();
