--- a/content/Components/Tabs.hbs
+++ b/content/Components/Tabs.hbs
@@ -1,7 +1,7 @@
 ---
 title: Tabs
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/tabs.jpg"
 nav-title: "Tabs"
 nav-text: "Tabs"
 nav-variant: "tabs"
