--- a/content/Components/alerts.hbs
+++ b/content/Components/alerts.hbs
@@ -1,7 +1,7 @@
 ---
 title: Alerts
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/alerts.jpg"
 nav-title: "Alerts"
 nav-text: "Alerts"
 nav-variant: "alerts"
