--- a/content/Components/article.hbs
+++ b/content/Components/article.hbs
@@ -1,7 +1,7 @@
 ---
 title: Article Template
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/article.jpg"
 nav-title: "Article"
 nav-text: "Article"
 nav-variant: "article"
