--- a/content/Components/badges.hbs
+++ b/content/Components/badges.hbs
@@ -1,7 +1,7 @@
 ---
 title: Badges
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/badges.jpg"
 nav-title: "Badges"
 nav-text: "Badges"
 nav-variant: "badges"
