--- a/content/Components/banners.hbs
+++ b/content/Components/banners.hbs
@@ -1,7 +1,7 @@
 ---
 title: Banners
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "placeholder.jpg"
 nav-title: "Banners"
 nav-text: "Banners"
 nav-variant: "banners"
