--- a/content/Components/boxes.hbs
+++ b/content/Components/boxes.hbs
@@ -1,7 +1,7 @@
 ---
 title: Boxes
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/boxes.jpg"
 nav-title: "Boxes"
 nav-text: "Boxes"
 nav-variant: "boxes"
