--- a/content/Components/buttons-stateful.hbs
+++ b/content/Components/buttons-stateful.hbs
@@ -1,10 +1,10 @@
 ---
-title: Buttons
+title: Buttons Stateful
 
-nav-thumb: "//placehold.it/200x200/"
-nav-title: "Buttons"
-nav-text: "Buttons"
-nav-variant: "button"
+nav-thumb: "placeholder.jpg"
+nav-title: "Buttons Stateful"
+nav-text: "Buttons Stateful"
+nav-variant: "buttons-stateful"
 page-category: "components"
 ---
 
@@ -28,15 +28,12 @@ page-category: "components"
 
 				<section class="section section--example">
 		            <header class="section__head">
-		                <h2 class="section__title">Example: Defaults</h2>
+		                <h2 class="section__title">Example</h2>
 		            </header>
 
 		            <div class="secton__body">
 				        <!-- code -->
-					        {{> button button}}
-					        {{> button button-alt}}
-					        {{> button button-disabled}}
-					        {{> button button-nolink}}
+
 				        <!-- end of code -->
 			        </div>
 
@@ -51,10 +48,7 @@ page-category: "components"
 
 		            <div class="section__body">
 			            <pre class="prettyprint linenums"><code class="html">
-&lt;a href="#linkurl1" class="button" title="Default"&gt;
-	&lt;span class="ripple"&gt;&lt;/span&gt;
-	&lt;span class="button__content"&gt;&lt;i class="icon icon--icon-1" aria-hidden="true" role="img"&gt;&lt;/i&gt;Default Button&lt;/span&gt;
-&lt;/a&gt;
+
 			             </code></pre>
 		            </div>
 
