--- a/content/Components/buttons.hbs
+++ b/content/Components/buttons.hbs
@@ -1,10 +1,10 @@
 ---
-title: Popovers
+title: Buttons
 
-nav-thumb: "//placehold.it/200x200/"
-nav-title: "Popovers"
-nav-text: "Popovers"
-nav-variant: "popovers"
+nav-thumb: "components/buttons.jpg"
+nav-title: "Buttons"
+nav-text: "Buttons"
+nav-variant: "buttons"
 page-category: "components"
 ---
 
@@ -28,17 +28,15 @@ page-category: "components"
 
 				<section class="section section--example">
 		            <header class="section__head">
-		                <h2 class="section__title">Example</h2>
+		                <h2 class="section__title">Example: Defaults</h2>
 		            </header>
 
 		            <div class="secton__body">
 				        <!-- code -->
-
-				        {{> popover popover-top }}
-				        {{> popover popover-bottom }}
-				        {{> popover popover-left }}
-				        {{> popover popover-right }}
-
+					        {{> button button}}
+					        {{> button button-alt}}
+					        {{> button button-disabled}}
+					        {{> button button-nolink}}
 				        <!-- end of code -->
 			        </div>
 
@@ -53,7 +51,10 @@ page-category: "components"
 
 		            <div class="section__body">
 			            <pre class="prettyprint linenums"><code class="html">
-
+&lt;a href="#linkurl1" class="button" title="Default"&gt;
+	&lt;span class="ripple"&gt;&lt;/span&gt;
+	&lt;span class="button__content"&gt;&lt;i class="icon icon--icon-1" aria-hidden="true" role="img"&gt;&lt;/i&gt;Default Button&lt;/span&gt;
+&lt;/a&gt;
 			             </code></pre>
 		            </div>
 
@@ -66,10 +67,6 @@ page-category: "components"
 		                <h2 class="section__title">References</h2>
 		            </header>
 		            <div class="section__body rte">
-
-		            	<ul>
-		            		<li><a href="http://www.tutorialrepublic.com/twitter-bootstrap-tutorial/bootstrap-popovers.php" target="_blank">http://www.tutorialrepublic.com/twitter-bootstrap-tutorial/bootstrap-popovers.php</a></li>
-		            	</ul>
 
 		            </div>
 		        </section>
