--- a/content/Components/callout.hbs
+++ b/content/Components/callout.hbs
@@ -1,7 +1,7 @@
 ---
 title: Callout Template
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "placeholder.jpg"
 nav-title: "Callout"
 nav-text: "Callout"
 nav-variant: "callout"
