--- a/content/Components/flashes.hbs
+++ b/content/Components/flashes.hbs
@@ -1,12 +1,12 @@
 ---
-title: Toasts
+title: Flashes
 
-nav-thumb: "//placehold.it/200x200/"
-nav-title: "Toasts"
-nav-text: "Toasts"
-nav-variant: "toasts"
+nav-thumb: "components/flashes.jpg"
+nav-title: "Flashes"
+nav-text: "Flashes"
+nav-variant: "flashes"
 page-category: "components"
-js-toast: true
+js-flash: true
 ---
 
 <main class="w w--main">
@@ -35,8 +35,7 @@ js-toast: true
 		            <div class="secton__body">
 				        <!-- code -->
 
-				        {{> toast toast }}
-
+				        {{> flash flash }}
 			        </div>
 
 		        </section>
@@ -47,11 +46,11 @@ js-toast: true
 		            <header class="section__head">
 		            	<h2 class="section__title">Example: Status</h2>
 		            </header>
-					<div class="section__body">
-				        {{> toast toast--info }}
-				        {{> toast toast--warn }}
-				        {{> toast toast--danger }}
-				        {{> toast toast--success }}
+                    <div class="secton__body">
+				        {{> flash flash--info }}
+				        {{> flash flash--warn }}
+				        {{> flash flash--danger }}
+				        {{> flash flash--success }}
 				        <!-- end of code -->
 			        </div>
 
@@ -60,10 +59,13 @@ js-toast: true
 <!-- example -->
 		    	<section class="section section--code">
 		            <header class="section__head">
-		            	<h2 class="section__title">Example: Toast</h2>
+		            	<h2 class="section__title">Example: Flash</h2>
 		            </header>
-					<div class="section__body">
-		            	<a href="#" class="button" data-toast='{"item": {"modifier": "","status": "success"}, "content": {"text": "You did it! A toast that pops up from the bottom of the page!","icon": [{"item": {"modifier": "round52","size": "xlarge"},"content": {"title": "" }}]}}'>Click here to see a live toast</a>
+                    <div class="secton__body">
+
+		            	<a href="#" class="button" data-flash='{"item": {"modifier": "","status": "success"},"content": {"text": "This is a flash message and it wont go away until you click the close button!","icon": [{"item": {"modifier": "tick7","size": "xlarge"},"content": {"title": ""}}]}}'>Click here to see a live flash</a>
+
+		            	<a href="#" class="button" data-flash='{"item": {"modifier": "","status": "warn"},"content": {"text": "This is a warning - youve been warned!","icon": [{"item": {"modifier": "tick7","size": "xlarge"},"content": {"title": ""}}]}}'>Click here to see another example</a>
 		            	<!-- end of code -->
 			        </div>
 
@@ -79,13 +81,8 @@ js-toast: true
 
 		            <div class="section__body">
 			            <pre class="prettyprint linenums"><code class="html">
-&lt;div class="toast danger"&gt;
-	&lt;a href="#" class="toast__close"&gt;&amp;times;&lt;/a&gt;
-	&lt;div class="toast__progress">&lt;/div&gt;
-	&lt;div class="toast__icon"&gt;&lt;i class="icon icon--tick7 xlarge" aria-hidden="true" role="img"&gt;&lt;/i&gt;
-&lt;/div&gt;
-    &lt;div class="toast__content"&gt;Its all going wrong - WE ARE ALL DOOMED!!&lt;/div&gt;
-&lt;/div&gt;
+
+
 			             </code></pre>
 		            </div>
 
