--- a/content/Components/input-gropus.hbs
+++ b/content/Components/input-gropus.hbs
@@ -1,7 +1,7 @@
 ---
 title: Input Groups
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "placeholder.jpg"
 nav-title: "Input Groups"
 nav-text: "Input Groups"
 nav-variant: "input-groups"
