--- a/content/Components/labels.hbs
+++ b/content/Components/labels.hbs
@@ -1,7 +1,7 @@
 ---
 title: Labels
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/labels.jpg"
 nav-title: "Labels"
 nav-text: "Labels"
 nav-variant: "labels"
