--- a/content/Components/pagination.hbs
+++ b/content/Components/pagination.hbs
@@ -1,7 +1,7 @@
 ---
 title: Pagination
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/pagination.jpg"
 nav-title: "Pagination"
 nav-text: "Pagination"
 nav-variant: "pagination"
