--- a/content/Components/popovers.hbs
+++ b/content/Components/popovers.hbs
@@ -1,10 +1,10 @@
 ---
-title: Card Template
+title: Popovers
 
-nav-thumb: "//placehold.it/200x200/"
-nav-title: "Card"
-nav-text: "Card"
-nav-variant: "card"
+nav-thumb: "components/popovers.jpg"
+nav-title: "Popovers"
+nav-text: "Popovers"
+nav-variant: "popovers"
 page-category: "components"
 ---
 
@@ -33,7 +33,12 @@ page-category: "components"
 
 		            <div class="secton__body">
 				        <!-- code -->
-	        				{{> card card }}
+
+				        {{> popover popover-top }}
+				        {{> popover popover-bottom }}
+				        {{> popover popover-left }}
+				        {{> popover popover-right }}
+
 				        <!-- end of code -->
 			        </div>
 
@@ -61,6 +66,10 @@ page-category: "components"
 		                <h2 class="section__title">References</h2>
 		            </header>
 		            <div class="section__body rte">
+
+		            	<ul>
+		            		<li><a href="http://getbootstrap.com/javascript/#popover-top" target="_blank">http://getbootstrap.com/javascript/#popover-top</a></li>
+		            	</ul>
 
 		            </div>
 		        </section>
