--- a/content/Components/select.hbs
+++ b/content/Components/select.hbs
@@ -1,7 +1,7 @@
 ---
 title: Select
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "placeholder.jpg"
 nav-title: "Select"
 nav-text: "Select"
 nav-variant: "select"
