--- a/content/Components/side-sliders.hbs
+++ b/content/Components/side-sliders.hbs
@@ -1,7 +1,7 @@
 ---
 title: Side Sliders
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "placeholder.jpg"
 nav-title: "Side Sliders"
 nav-text: "Side Sliders"
 nav-variant: "side-sliders"
