--- a/content/Components/story.hbs
+++ b/content/Components/story.hbs
@@ -1,7 +1,7 @@
 ---
 title: Story
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "placeholder.jpg"
 nav-title: "Story"
 nav-text: "Story"
 nav-variant: "story"
