--- a/content/Components/thumbnails.hbs
+++ b/content/Components/thumbnails.hbs
@@ -1,7 +1,7 @@
 ---
 title: Thumbnails
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "placeholder.jpg"
 nav-title: "Thumbnails"
 nav-text: "Thumbnails"
 nav-variant: "thumbnails"
