--- a/content/Components/wells.hbs
+++ b/content/Components/wells.hbs
@@ -1,7 +1,7 @@
 ---
 title: Wells
 
-nav-thumb: "//placehold.it/200x200/"
+nav-thumb: "components/wells.jpg"
 nav-title: "Wells"
 nav-text: "Wells"
 nav-variant: "wells"
