--- a/content/Systems/structure.hbs
+++ b/content/Systems/structure.hbs
@@ -1,6 +1,7 @@
 ---
 title: Structure
 
+nav-thumb: "systems/structure.jpg"
 nav-title: "Structure"
 nav-text: "Structure"
 nav-variant: "structure"
