--- a/content/Systems/typography.hbs
+++ b/content/Systems/typography.hbs
@@ -1,6 +1,7 @@
 ---
 title: Typography
 
+nav-thumb: "systems/typography.jpg"
 nav-title: "Typography"
 nav-text: "Typography"
 nav-variant: "typography"
