--- a/content/index.hbs
+++ b/content/index.hbs
@@ -19,7 +19,7 @@ navigation-order: 1
 					{{#if subtitle}}<p class="page__subtitle">{{subtitle}}</p>{{/if}}
 				</div>
 
-				<div class="page__body rte">
+				<div class="page__body">
 					{{#withSort page-category "page.title"}}
 					<h2>{{page-category}}</h2>
 					<ul class="list list--alloythumbs horizontal c">
@@ -29,7 +29,7 @@ navigation-order: 1
 								<li class="list__item">
 									<a href="{{relative ../../../../page.dest this.dest}}" class="card card--alloythumb{{#if page.nav-variant}} card--{{data.nav-variant}}{{/if}}" title="{{data.nav-title}}"{{#if data.nav-target}} target="{{data.nav-target}}"{{/if}}>
 										<div class="card__front">
-											<div class="card__head">{{#if data.nav-thumb}}<img src="{{data.nav-thumb}}" alt="{{data.nav-text}}" class="card__image" />{{/if}}
+											<div class="card__head">{{#if data.nav-thumb}}<img src="/assets/img/thumbs/{{data.nav-thumb}}" alt="{{data.nav-text}}" class="card__image" />{{/if}}
 												<div class="card__title">{{capitalizeFirst data.nav-text}}</div>
 											</div>
 										</div>
