--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -199,6 +199,7 @@
 @MODULE-Accordion:              true;
 @MODULE-Alert:                  true;
 @MODULE-Badge:                  true;
+@MODULE-Banner:                    true;
 @MODULE-Box:                    true;
 @MODULE-Breadcrumbs:            true;
 @MODULE-Browsehappy:            true;
