--- a/content/Components/banners.hbs
+++ b/content/Components/banners.hbs
@@ -21,7 +21,6 @@ page-category: "components"
 <!-- writings -->
 
 		        <div class="page__body rte">
-
 		        </div>
 
 <!-- example -->
@@ -33,6 +32,7 @@ page-category: "components"
 
 		            <div class="secton__body">
 				        <!-- code -->
+						{{> banner banner }}
 
 				        <!-- end of code -->
 			        </div>
