--- a/content/Tests/index.hbs
+++ b/content/Tests/index.hbs
@@ -1,8 +1,8 @@
 ---
-title: This is a test page
-subtitle: Where I am trying out wether or not we can create dynamicly linked partials
+title: Tests
+subtitle: Where we try new things that just dont work yet
 
-nav-title: "Test Page"
+nav-title: "Test"
 nav-text: "Tests"
 nav-variant: "test"
 navigation-main: true
@@ -11,11 +11,37 @@ page-category: "tests"
 ---
 
 <main class="w w--main">
-	<div class="g">
-	    <div class="c__lg--1">
+    <div class="g">
+        <div class="c__lg--1">
 
-			{{> ALLOY_page ALLOY_page--test}}
+            <div class="page{{#if nav-variant}} page--{{nav-variant}}{{/if}}">
+                <div class="page__head">
+                    <h1 class="page__title">{{title}}</h1>
+					{{#if subtitle}}<p class="page__subtitle">{{subtitle}}</p>{{/if}}
+                </div>
 
-		</div>
-	</div>
+                <!-- writings -->
+
+                <div class="page__body rte">
+					{{#withSort page-category "page.title"}}
+						{{#is page-category "tests"}}
+                            <ul>
+								{{#each this.pages}}
+									{{#this}}
+										{{#isnt data.navigation-main true}}
+                                            <li><a class="list__link list__link--{{data.nav-variant}}" href="{{relative ../../../../../page.dest this.dest}}" title="{{data.nav-title}}"><span>{{capitalizeFirst data.nav-text}}</span></a></li>
+										{{/isnt}}
+									{{/this}}
+								{{/each}}
+                            </ul>
+						{{/is}}
+					{{/withSort}}
+                </div>
+
+                <!-- reference -->
+
+            </div>
+
+        </div>
+    </div>
 </main>
