--- a/content/_partials/banner.hbs
+++ b/content/_partials/banner.hbs
@@ -2,7 +2,7 @@
     <div class="banner{{#if item.modifier}} banner--{{item.modifier}}{{/if}}"{{#if content.background}} style="background-image:url('{{content.backgroundUrl}}')"{{/if}}>
         <div class="banner__overlay"></div>
         <div class="banner__content">
-            <div class="banner__foreground"><img src="//placehold.it/200x200" alt="" /></div>
+            {{#if content.foregroundUrl}}<div class="banner__foreground"><img src="{{content.foregroundUrl}}" alt="{{content.foregroundUrl}}" /></div>{{/if}}
             <div class="banner__title">{{{content.title}}}</div>
             <div class="banner__subtitle">{{{content.subtitle}}}</div>
             <div class="banner__body">{{{content.body}}}</div>
